# pointcloud_image_detect

./: CMakeLists.txt  package.xml
doc/: manifest.yaml
doc/html/: annotated.html  classCluster-members.html  classCluster.html  classes.html  cluster_8cpp.html  cluster_8cpp__incl.map  cluster_8cpp__incl.md5  cluster_8cpp_source.html  cluster_8h.html  cluster_8h__dep__incl.map  cluster_8h__dep__incl.md5  cluster_8h__incl.map  cluster_8h__incl.md5  cluster_8h_source.html  dir_000000_000001.html  dir_8637afc38b758fdb535647a385c49b5e.html  dir_8637afc38b758fdb535647a385c49b5e_dep.map  dir_8637afc38b758fdb535647a385c49b5e_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index-msg.html  index.html  pointcloud__euclidean__cluster__detect_8cpp.html  pointcloud__euclidean__cluster__detect_8cpp__incl.map  pointcloud__euclidean__cluster__detect_8cpp__incl.md5  pointcloud__euclidean__cluster__detect_8cpp_source.html  pointcloud__sweep__aggregator_8cpp.html  pointcloud__sweep__aggregator_8cpp__incl.map  pointcloud__sweep__aggregator_8cpp__incl.md5  (+1 more)
include/: cluster.h
launch/: pointcloud_cluster_detect.launch  pointcloud_euclidean_cluster_detect.launch  pointcloud_sweep_aggregator.launch
msg/: AISContact.msg  BoundingBox.msg  CloudCluster.msg  DetectedObject.msg
src/: CMakeLists.txt  README.md  cluster.cpp  package.xml  pointcloud_euclidean_cluster_detect.cpp  pointcloud_sweep_aggregator.cpp
